@@ -126,6 +126,7 @@
       dnd.js
       object_reference.js
       object_sequence.js
+      restructuredtext.js
       table.js
       xeyes.js
       menu.js
